/*! \page changelogUser Changelog (compact, for users)
2012.xx.xx - v0.0.5
Changes since v0.0.4 (f4712c5717695e1b2fe0ffe28067b25daa62a782):
 - expanded documentation
 - added about menu
 - ported the game to Qt5
 - redesigned all uses of particles

2012.02.10 - v0.0.4.
Changes since v0.0.3 (2e43d28118a0b1ffd9a24b3fb990a824b7597336):
 - add game saving and loading
 - add possibility to load non-qrc files
 - add clusters of obstacles to map props
 - add LOS (Line Of Sight) detection
 - add scenario editor helper file
 - add path converter, that makes it easy to generate QRC code
 - make use of both QRC and non-QRC implementation possible
 - add project archiving tool (archiveProject)
 - add tool for converting QML into QML 2.0
 - reshape the code so that it is easier to maintain and read
 - add comments to source files, add content to other readmes etc.
 - add doxygen documentation, including .qch
 - numerous bug fixes

2011.12.20 - v0.0.3.
Changes since v0.0.2 (3ff08fe849905f067877b86a81d26502a39336ba):
 - add PreferencesMenu
 - add prototype damage system
 - make orders be cancelled ONLY on "Stop" oder
 - add scription support (example script is in Scenario_tst2)
 - add waypoint creation (with waypoint order markers)
 - add order queues
 - make group numbers always remain vertical
 - add option to close scenario to OptionsMenu
 - add pinch zooming, and zoom centering
 - rebuild zooming so that gameArea's dimensions stay the same
 - add dynamic ScenarioMenu
 - remove all trial engines
 - add Top- and BottomMenu flickability
 - experimental, modular QRC implementation for CCF
 - reorganise files into a new structure more appropriate for modding
 - make QML use list and variant properties instead of JS Arrays
 - add terrainInfoMode for mobile mode
 - UI adjustments for better use and looks
 - parametrized menus, so that they change size accordingly to local conditions
 */